<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ptitgourmand.présentation.visualiserRecette.VueVisualiserRecette">

    <LinearLayout
        android:id="@+id/layoutVisualiserRecette"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/conteneurPrincipal"
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNomRecette"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nom Recette"
                    android:textColor="#FF9800"
                    android:textSize="20sp"
                    android:layout_weight="0.9"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txtUtilisateur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imgRecette"
                android:layout_width="match_parent"
                android:layout_height="218dp"
                app:srcCompat="@drawable/defaultrecette"
                tools:srcCompat="@drawable/defaultrecette" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                app:srcCompat="@drawable/separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="247dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Liste_ingrédient" />

                <LinearLayout
                    android:id="@+id/conteneurIngrédients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/champListeIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Durée" />

                    <TextView
                        android:id="@+id/txtDurée"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="_H__"
                        android:textColor="#FF9800" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Portion" />

                    <TextView
                        android:id="@+id/txtPortions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="#FF9800" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Personne(s)" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                app:srcCompat="@drawable/separator" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Étapes"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/conteneurÉtapes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tempÉtapes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>